--- a/puput/templates/puput/entry_page.html
+++ b/puput/templates/puput/entry_page.html
@@ -1,5 +1,5 @@
 {% extends "puput/base.html" %}
-{% load wagtailcore_tags wagtailimages_tags puput_tags %}
+{% load i18n wagtailcore_tags wagtailimages_tags puput_tags social_share %}
 
 {% block title %}
     {{ self.title }} | {{ blog_page.title }}
@@ -43,7 +43,7 @@
 
 {% block content %}
     <article class="box page-content"
-             {%if self.id %}data-entry-page-update-comments-url="{% url 'entry_page_update_comments' self.id %}{% endif %}">
+             {% if self.id %}data-entry-page-update-comments-url="{% url 'entry_page_update_comments' self.id %}{% endif %}">
         {% include 'puput/entry_page_header.html' with entry=self %}
         {% if self.header_image %}
             <section>
@@ -51,10 +51,33 @@
                     {% image self.header_image fill-800x450 as header_image %}
                     <img alt="{{ self.header_image.title }}" src="{{ header_image.url }}">
                 </span>
+                {% include 'puput/entry_links.html' with entry=self %}
             </section>
         {% endif %}
         <section>
             {{ self.body|richtext}}
+            <div class="row">
+                <div class="col-md-2">
+                    <a href="{% pageurl blog_page %}" class="blog_btn back">
+                        <i class="fa fa-angle-left"></i> {% trans 'Return' %}
+                    </a>
+                </div>
+                <ul class="social-share-all text-right col-md-10">
+                    <li class="social-item">
+                       {% post_to_facebook self.url '<span><i class="fa fa-facebook"></i></span>' %}
+                    </li>
+                    <li class="social-item">
+                        {% post_to_twitter self.title self.url '<span><i class="fa fa-twitter"></i></span>' %}
+                    </li>
+                    <li class="social-item">
+                        {% post_to_linkendin self.url '<span><i class="fa fa-linkedin"></i></span>' %}
+                    </li>
+                    <li class="social-item">
+                        {% post_to_gplus self.url '<span><i class="fa fa-google-plus"></i></span>' %}
+                    </li>
+                </ul>
+            </div>
+
         </section>
         {% show_comments %}
     </article>
