--- a/puput/templates/puput/related_entries.html
+++ b/puput/templates/puput/related_entries.html
@@ -10,6 +10,10 @@
                 {% for related_entry in entry.related|slice:':4' %}
                     <div class="col-md-3">
                         <section class="box feature">
+                            <div class="image-related">
+                                {% image entry.header_image fill-800x240 as header_image %}
+                                <img alt="{{ entry.header_image.title }}" src="{{ header_image.url }}">
+                            </div>
                             <h3>
                                 <a href="{% entry_url related_entry blog_page %}">{{ related_entry.title }}</a>
                             </h3>
